--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "pair-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "ejs": "^3.1.9",
